crates/theming/tests/snapshots/generators__event_horizon_dark_gtk_css.snap
---
source: crates/theming/tests/generators.rs
assertion_line: 44
expression: "resolve(\"event-horizon\", Mode::Dark).to_gtk_css()"
---
/* Event Horizon dark */
window {
  background-color: #1c1e26;
  color: #fadad1;
  font-family: Inter, sans-serif;
  font-size: 15px;
}

headerbar {
  background-color: #1c1e26;
  background-image: none;
  color: #fadad1;
  border-bottom: 1px solid #2e303e;
  box-shadow: none;
}

separator {
  background-color: #2e303e;
  min-height: 1px;
  min-width: 1px;
}

paned > separator {
  background-color: #2e303e;
  background-image: none;
  min-width: 1px;
  min-height: 1px;
}

.sidebar {
  background-color: #1c1e26;
}

.sidebar listview {
  background-color: transparent;
  color: #fadad1;
  padding-top: 6px;
}

.sidebar listview > row {
  border-radius: 3px;
  padding: 3px 8px;
  margin: 1px 6px;
}

.sidebar listview > row:hover {
  background-color: #2e303e;
}

.sidebar listview > row:focus-within {
  box-shadow: inset 2px 0 0 0 #ee64ac;
}

.tree-title {
  color: #6c6f93;
  font-size: 14px;
}

.sidebar listview > row:selected .tree-title {
  color: alpha(#1c1e26, 0.7);
}

.sidebar listview > row:selected {
  background-color: #ee64ac;
  color: #1c1e26;
}

.sidebar listview > row:selected:hover {
  background-color: #ee64ac;
  color: #1c1e26;
}

button {
  background-color: #232530;
  background-image: none;
  color: #fadad1;
  border: 2px solid #fadad1;
  border-radius: 3px;
  box-shadow: none;
  padding: 6px 14px;
}

button:hover {
  background-color: #2e303e;
}

button.suggested-action {
  background-color: #fadad1;
  background-image: none;
  color: #1c1e26;
  border-color: #fadad1;
}

button.suggested-action:hover {
  background-color: #ee64ac;
  border-color: #ee64ac;
  color: #1c1e26;
}

button.destructive-action {
  background-color: #e95678;
  background-image: none;
  color: #1c1e26;
  border-color: #e95678;
}

button.destructive-action:hover {
  background-color: #e95678;
}

windowcontrols button, windowcontrols button.titlebutton {
  background-color: transparent;
  background-image: none;
  border: none;
  box-shadow: none;
  color: #fadad1;
}

windowcontrols button:hover, windowcontrols button.titlebutton:hover {
  background-color: #2e303e;
  background-image: none;
  color: #fadad1;
  border-radius: 3px;
}

windowcontrols button image, windowcontrols button:hover image {
  background: none;
  background-color: transparent;
  background-image: none;
  box-shadow: none;
  color: #fadad1;
}

entry {
  background-color: transparent;
  background-image: none;
  color: #fadad1;
  border: none;
  border-bottom: 2px solid #fadad1;
  border-radius: 0;
  box-shadow: none;
  outline: none;
  padding: 6px 2px;
}

entry:focus-within, entry:hover, entry:focus-visible {
  outline: none;
  box-shadow: none;
}

entry:focus-within {
  border-bottom-color: #ee64ac;
}

entry > text, entry > text:focus-visible {
  outline: none;
  box-shadow: none;
}

row:focus, row:focus-visible, listview:focus-visible, listbox:focus-visible {
  outline: none;
}

popover > contents {
  background-color: #232530;
  color: #fadad1;
  border: 2px solid #fadad1;
  border-radius: 3px;
  box-shadow: none;
}

.picker-scrim {
  background-color: alpha(#1c1e26, 0.45);
}

.status-git {
  background: none;
  border: none;
  box-shadow: none;
  color: #6c6f93;
  font-family: "CaskaydiaMono Nerd Font", monospace;
  font-size: 14px;
  padding: 0 8px;
  min-height: 0;
}

.status-git:hover {
  background: none;
  color: #ee64ac;
}

.status-broken {
  background: none;
  border: none;
  box-shadow: none;
  color: #e95678;
  font-size: 14px;
  padding: 0 8px;
  min-height: 0;
}

.status-broken:hover {
  background: none;
  color: #ee64ac;
}

.backlinks {
  background-color: #1c1e26;
}

.backlinks-header {
  background: none;
  border: none;
  box-shadow: none;
  color: #6c6f93;
  font-size: 14px;
  padding: 3px 10px;
  min-height: 0;
}

.backlinks-header:hover {
  background: none;
  color: #fadad1;
}

.search-results {
  background-color: transparent;
  color: #fadad1;
}

.search-results > row {
  border-radius: 3px;
  padding: 1px 6px;
  margin: 0 6px;
}

.search-results > row:hover {
  background-color: #2e303e;
}

.search-results > row:selected {
  background-color: #2e303e;
  color: #fadad1;
  box-shadow: inset 2px 0 0 0 #ee64ac;
}

.panel-back {
  background: none;
  border: none;
  box-shadow: none;
  color: #fadad1;
  padding: 0 4px;
  margin: 0;
  min-height: 0;
  min-width: 0;
}

.panel-back label {
  font-family: "CaskaydiaMono Nerd Font", monospace;
  font-size: 16px;
  margin-bottom: 3px;
}

.panel-back:hover {
  background: none;
  color: #ee64ac;
}

.tags-heading {
  color: #6c6f93;
  font-size: 14px;
}

.tag-row {
  padding: 3px 4px;
}

.search-heading {
  margin-top: 14px;
  padding: 2px 2px 4px 2px;
  border-bottom: 1px solid alpha(#fadad1, 0.25);
}

.search-results > row:first-child .search-heading {
  margin-top: 2px;
}

.search-name {
  font-weight: bold;
}

.search-folder {
  color: #6c6f93;
  font-size: 14px;
}

.search-count {
  color: #6c6f93;
  font-size: 14px;
}

.search-snippet {
  color: #6c6f93;
  margin-left: 5px;
  padding: 1px 0 1px 10px;
  border-left: 1px solid alpha(#fadad1, 0.18);
}

.completion listbox {
  background-color: transparent;
  color: #fadad1;
}

.completion listbox > row {
  border-radius: 3px;
  padding: 2px 8px;
}

.completion listbox > row:selected {
  background-color: #ee64ac;
  color: #1c1e26;
}

.picker {
  background-color: #232530;
  color: #fadad1;
  border: 2px solid #fadad1;
  border-radius: 3px;
  padding: 8px 10px 6px 10px;
}

.picker entry {
  font-size: 19px;
  padding-bottom: 8px;
}

.picker listview {
  background-color: transparent;
  color: #fadad1;
  margin-top: 6px;
}

.picker listview > row {
  border-radius: 3px;
  padding: 4px 8px;
}

.picker listview > row:hover {
  background-color: #2e303e;
}

.picker listview > row:selected {
  background-color: #ee64ac;
  color: #1c1e26;
}

.picker-detail {
  color: #6c6f93;
}

.picker listview > row:selected .picker-detail {
  color: alpha(#1c1e26, 0.65);
}

tooltip {
  background-color: #232530;
  color: #fadad1;
  border: 2px solid #fadad1;
  border-radius: 3px;
}
