crates/theming/tests/snapshots/generators__event_horizon_dark_preview_css.snap
---
source: crates/theming/tests/generators.rs
expression: "resolve(\"event-horizon\", Mode::Dark).to_preview_css()"
---
/* Event Horizon dark */
:root { color-scheme: dark; }

body {
  margin: 0;
  padding: 2rem;
  background: #1c1e26;
  color: #fadad1;
  font-family: serif;
  font-size: 15px;
  line-height: 1.6;
}

h1, h2, h3, h4, h5, h6 {
  color: #fadad1;
  line-height: 1.25;
}

a {
  color: #26bbd9;
}

a.broken-link {
  color: #6c6f93;
  text-decoration: underline dashed;
}

code {
  font-family: monospace;
  background: #2e303e;
  padding: 0.15em 0.35em;
  border-radius: 6px;
}

pre {
  background: #2e303e;
  padding: 1rem;
  border-radius: 10px;
  overflow: auto;
}

pre code {
  background: transparent;
  padding: 0;
}

blockquote {
  margin: 1rem 0;
  padding: 0.25rem 1rem;
  border-left: 4px solid #ee64ac;
  color: #6c6f93;
}

hr {
  border: none;
  border-top: 2px solid #2e303e;
}

table {
  border-collapse: collapse;
}

th, td {
  border: 1px solid #2e303e;
  padding: 0.4rem 0.6rem;
}

img {
  max-width: 100%;
}
