crates/theming/tests/snapshots/generators__event_horizon_dark_sourceview_scheme.snap
---
source: crates/theming/tests/generators.rs
expression: "resolve(\"event-horizon\", Mode::Dark).to_sourceview_scheme_xml()"
---
<?xml version="1.0" encoding="UTF-8"?>
<style-scheme id="event-horizon-dark" name="Event Horizon dark" version="1.0">
<author>jotter</author>
<description>Generated by jotter theming</description>

<style name="text" foreground="#fadad1" background="#1c1e26"/>
<style name="background-pattern" background="#232530"/>
<style name="cursor" foreground="#ee64ac"/>
<style name="current-line" background="#232530"/>
<style name="current-line-number" foreground="#fadad1" background="#232530"/>
<style name="line-numbers" foreground="#6c6f93" background="#1c1e26"/>
<style name="right-margin" foreground="#2e303e" background="#2e303e"/>
<style name="selection" background="#2e303e"/>
<style name="bracket-match" foreground="#ee64ac" bold="true"/>

<style name="markdown:header" foreground="#ee64ac" bold="true"/>
<style name="markdown:emphasis" foreground="#59e3e3" italic="true"/>
<style name="markdown:strong-emphasis" foreground="#ee64ac" bold="true"/>
<style name="markdown:link-text" foreground="#26bbd9" underline="single"/>
<style name="markdown:url" foreground="#26bbd9" underline="single"/>
<style name="markdown:link-destination" foreground="#26bbd9"/>
<style name="markdown:code" foreground="#59e3e3"/>
<style name="markdown:code-block" foreground="#59e3e3"/>
<style name="markdown:blockquote-marker" foreground="#6c6f93" italic="true"/>
<style name="markdown:list-marker" foreground="#3fc4de" bold="true"/>
<style name="markdown:horizontal-rule" foreground="#2e303e" bold="true"/>

<style name="def:comment" foreground="#6c6f93" italic="true"/>
<style name="def:keyword" foreground="#ee64ac" bold="true"/>
<style name="def:string" foreground="#29d398"/>
<style name="def:number" foreground="#fab795"/>
<style name="def:function" foreground="#26bbd9"/>
<style name="def:type" foreground="#3fc4de"/>
<style name="def:identifier" foreground="#fadad1"/>
</style-scheme>
