crates/theming/tests/snapshots/generators__retro82_dark_gtk_css.snap
---
source: crates/theming/tests/generators.rs
assertion_line: 19
expression: "resolve(\"retro82\", Mode::Dark).to_gtk_css()"
---
/* retro82 dark */
window {
  background-color: #05182e;
  color: #f6dcac;
  font-family: Inter, sans-serif;
  font-size: 15px;
}

headerbar {
  background-color: #05182e;
  background-image: none;
  color: #f6dcac;
  border-bottom: 1px solid #134e5a;
  box-shadow: none;
}

separator {
  background-color: #134e5a;
  min-height: 1px;
  min-width: 1px;
}

paned > separator {
  background-color: #134e5a;
  background-image: none;
  min-width: 1px;
  min-height: 1px;
}

.sidebar {
  background-color: #05182e;
}

.sidebar listview {
  background-color: transparent;
  color: #f6dcac;
  padding-top: 6px;
}

.sidebar listview > row {
  border-radius: 3px;
  padding: 3px 8px;
  margin: 1px 6px;
}

.sidebar listview > row:hover {
  background-color: #134e5a;
}

.tree-title {
  color: #6d8f8a;
  font-size: 14px;
}

.sidebar listview > row:selected .tree-title {
  color: alpha(#05182e, 0.7);
}

.sidebar listview > row:selected {
  background-color: #faa968;
  color: #05182e;
}

.sidebar listview > row:selected:hover {
  background-color: #faa968;
  color: #05182e;
}

button {
  background-color: #0a2138;
  background-image: none;
  color: #f6dcac;
  border: 2px solid #f6dcac;
  border-radius: 3px;
  box-shadow: none;
  padding: 6px 14px;
}

button:hover {
  background-color: #134e5a;
}

button.suggested-action {
  background-color: #f6dcac;
  background-image: none;
  color: #05182e;
  border-color: #f6dcac;
}

button.suggested-action:hover {
  background-color: #faa968;
  border-color: #faa968;
  color: #05182e;
}

button.destructive-action {
  background-color: #f85525;
  background-image: none;
  color: #05182e;
  border-color: #f85525;
}

button.destructive-action:hover {
  background-color: #f85525;
}

windowcontrols button, windowcontrols button.titlebutton {
  background-color: transparent;
  background-image: none;
  border: none;
  box-shadow: none;
  color: #f6dcac;
}

windowcontrols button:hover, windowcontrols button.titlebutton:hover {
  background-color: #134e5a;
  background-image: none;
  color: #f6dcac;
  border-radius: 3px;
}

windowcontrols button image, windowcontrols button:hover image {
  background: none;
  background-color: transparent;
  background-image: none;
  box-shadow: none;
  color: #f6dcac;
}

entry {
  background-color: transparent;
  background-image: none;
  color: #f6dcac;
  border: none;
  border-bottom: 2px solid #f6dcac;
  border-radius: 0;
  box-shadow: none;
  outline: none;
  padding: 6px 2px;
}

entry:focus-within, entry:hover, entry:focus-visible {
  outline: none;
  box-shadow: none;
}

entry:focus-within {
  border-bottom-color: #faa968;
}

entry > text, entry > text:focus-visible {
  outline: none;
  box-shadow: none;
}

row:focus, row:focus-visible, listview:focus-visible, listbox:focus-visible {
  outline: none;
}

popover > contents {
  background-color: #0a2138;
  color: #f6dcac;
  border: 2px solid #f6dcac;
  border-radius: 3px;
  box-shadow: none;
}

.picker-scrim {
  background-color: alpha(#05182e, 0.45);
}

.backlinks {
  background-color: #05182e;
}

.backlinks-header {
  background: none;
  border: none;
  box-shadow: none;
  color: #6d8f8a;
  font-size: 14px;
  padding: 3px 10px;
  min-height: 0;
}

.backlinks-header:hover {
  background: none;
  color: #f6dcac;
}

.search-results {
  background-color: transparent;
  color: #f6dcac;
}

.search-results > row {
  border-radius: 3px;
  padding: 1px 6px;
  margin: 0 6px;
}

.search-results > row:hover {
  background-color: #134e5a;
}

.search-results > row:selected {
  background-color: #134e5a;
  color: #f6dcac;
  box-shadow: inset 2px 0 0 0 #faa968;
}

.search-heading {
  margin-top: 14px;
  padding: 2px 2px 4px 2px;
  border-bottom: 1px solid alpha(#f6dcac, 0.25);
}

.search-results > row:first-child .search-heading {
  margin-top: 2px;
}

.search-name {
  font-weight: bold;
}

.search-folder {
  color: #6d8f8a;
  font-size: 14px;
}

.search-count {
  color: #6d8f8a;
  font-size: 14px;
}

.search-snippet {
  color: #6d8f8a;
  margin-left: 5px;
  padding: 1px 0 1px 10px;
  border-left: 1px solid alpha(#f6dcac, 0.18);
}

.completion listbox {
  background-color: transparent;
  color: #f6dcac;
}

.completion listbox > row {
  border-radius: 3px;
  padding: 2px 8px;
}

.completion listbox > row:selected {
  background-color: #faa968;
  color: #05182e;
}

.picker {
  background-color: #0a2138;
  color: #f6dcac;
  border: 2px solid #f6dcac;
  border-radius: 3px;
  padding: 8px 10px 6px 10px;
}

.picker entry {
  font-size: 19px;
  padding-bottom: 8px;
}

.picker listview {
  background-color: transparent;
  color: #f6dcac;
  margin-top: 6px;
}

.picker listview > row {
  border-radius: 3px;
  padding: 4px 8px;
}

.picker listview > row:hover {
  background-color: #134e5a;
}

.picker listview > row:selected {
  background-color: #faa968;
  color: #05182e;
}

.picker-detail {
  color: #6d8f8a;
}

.picker listview > row:selected .picker-detail {
  color: alpha(#05182e, 0.65);
}

tooltip {
  background-color: #0a2138;
  color: #f6dcac;
  border: 2px solid #f6dcac;
  border-radius: 3px;
}
