crates/theming/tests/snapshots/generators__retro82_dark_preview_css.snap
---
source: crates/theming/tests/generators.rs
expression: "resolve(\"retro82\", Mode::Dark).to_preview_css()"
---
/* retro82 dark */
:root { color-scheme: dark; }

body {
  margin: 0;
  padding: 2.5rem 2.75rem;
  background: #05182e;
  color: #f6dcac;
  font-family: Inter, sans-serif;
  font-size: 15px;
  line-height: 1.6;
}

h1, h2, h3, h4, h5, h6 {
  color: #f6dcac;
  line-height: 1.1;
  font-weight: 800;
  letter-spacing: -0.015em;
  margin: 1.6em 0 0.5em;
}

h1 {
  font-size: 2.4em;
  margin-top: 0.2em;
}

h2 {
  font-size: 1.7em;
}

h3 {
  font-size: 1.32em;
}

h4 {
  font-size: 1.12em;
}

a {
  color: #3f8f8a;
  text-decoration-thickness: 2px;
  text-underline-offset: 2px;
}

a.broken-link {
  color: #6d8f8a;
  text-decoration: underline dashed;
}

code {
  font-family: monospace;
  background: #103049;
  padding: 0.15em 0.35em;
  border-radius: 3px;
}

pre {
  background: #103049;
  padding: 1rem;
  border: 2px solid #134e5a;
  border-radius: 3px;
  overflow: auto;
}

pre code {
  background: transparent;
  padding: 0;
}

blockquote {
  margin: 1rem 0;
  padding: 0.25rem 1rem;
  border-left: 4px solid #faa968;
  color: #6d8f8a;
}

hr {
  border: none;
  border-top: 2px solid #134e5a;
  margin: 2rem 0;
}

table {
  border-collapse: separate;
  border-spacing: 0;
  margin: 1rem 0;
  border: 2px solid #134e5a;
  border-radius: 3px;
}

th, td {
  border-right: 1px solid #134e5a;
  border-bottom: 1px solid #134e5a;
  padding: 0.5rem 0.9rem;
  text-align: left;
}

th:last-child, td:last-child {
  border-right: none;
}

tr:last-child td {
  border-bottom: none;
}

th {
  background: #103049;
}

th:first-child {
  border-top-left-radius: 3px;
}

th:last-child {
  border-top-right-radius: 3px;
}

tr:last-child td:first-child {
  border-bottom-left-radius: 3px;
}

tr:last-child td:last-child {
  border-bottom-right-radius: 3px;
}

li:has(> input[type="checkbox"]) {
  list-style: none;
}

input[type="checkbox"] {
  appearance: none;
  -webkit-appearance: none;
  width: 1.15em;
  height: 1.15em;
  margin-right: 0.5em;
  vertical-align: -0.25em;
  border: 2px solid #134e5a;
  border-radius: 3px;
  background-color: #103049;
  background-repeat: no-repeat;
  background-position: center;
  background-size: 0.95em;
}

input[type="checkbox"]:checked {
  background-color: #3f8f8a;
  border-color: #3f8f8a;
  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'%3E%3Cpath fill='none' stroke='%2305182e' stroke-width='2.6' stroke-linecap='round' stroke-linejoin='round' d='M4 8.5l3 3 5-6'/%3E%3C/svg%3E");
}

img {
  max-width: 100%;
}
