crates/theming/tests/snapshots/generators__retro82_dark_sourceview_scheme.snap
---
source: crates/theming/tests/generators.rs
expression: "resolve(\"retro82\", Mode::Dark).to_sourceview_scheme_xml()"
---
<?xml version="1.0" encoding="UTF-8"?>
<style-scheme id="retro82-dark" name="retro82 dark" version="1.0">
<author>jotter</author>
<description>Generated by jotter theming</description>

<style name="text" foreground="#f6dcac" background="#05182e"/>
<style name="background-pattern" background="#0a2138"/>
<style name="cursor" foreground="#faa968"/>
<style name="current-line" background="#0a2138"/>
<style name="current-line-number" foreground="#f6dcac" background="#0a2138"/>
<style name="line-numbers" foreground="#6d8f8a" background="#05182e"/>
<style name="right-margin" foreground="#134e5a" background="#134e5a"/>
<style name="selection" background="#134e5a"/>
<style name="bracket-match" foreground="#faa968" bold="true"/>

<style name="markdown:header" foreground="#faa968" bold="true"/>
<style name="markdown:emphasis" foreground="#6a9d97" italic="true"/>
<style name="markdown:strong-emphasis" foreground="#faa968" bold="true"/>
<style name="markdown:link-text" foreground="#3f8f8a" underline="single"/>
<style name="markdown:url" foreground="#3f8f8a" underline="single"/>
<style name="markdown:link-destination" foreground="#3f8f8a"/>
<style name="markdown:code" foreground="#6a9d97"/>
<style name="markdown:code-block" foreground="#6a9d97"/>
<style name="markdown:blockquote-marker" foreground="#6d8f8a" italic="true"/>
<style name="markdown:list-marker" foreground="#8cbfb8" bold="true"/>
<style name="markdown:horizontal-rule" foreground="#134e5a" bold="true"/>

<style name="def:comment" foreground="#6d8f8a" italic="true"/>
<style name="def:keyword" foreground="#faa968" bold="true"/>
<style name="def:string" foreground="#028391"/>
<style name="def:number" foreground="#e97b3c"/>
<style name="def:function" foreground="#3f8f8a"/>
<style name="def:type" foreground="#8cbfb8"/>
<style name="def:identifier" foreground="#f6dcac"/>
</style-scheme>
