crates/theming/tests/snapshots/generators__retro82_dark_tui_gtk_css.snap
---
source: crates/theming/tests/generators.rs
expression: "resolve(\"retro82\", Mode::Dark).with_style(Style::Tui).to_gtk_css()"
---
/* retro82 dark tui */
window {
  background-color: #05182e;
  color: #f6dcac;
  font-family: Inter, sans-serif;
  font-size: 15px;
}

window.csd {
  border-radius: 0;
}

headerbar {
  background-color: #05182e;
  background-image: none;
  color: #f6dcac;
  border-bottom: 1px solid #3f8f8a;
  box-shadow: none;
  padding-left: 0;
}

separator {
  background-color: alpha(#3f8f8a, 0.45);
  min-height: 1px;
  min-width: 1px;
}

paned > separator {
  background-color: alpha(#3f8f8a, 0.45);
  background-image: none;
  min-width: 1px;
  min-height: 1px;
}

.sidebar {
  background-color: #05182e;
}

.sidebar listview {
  background-color: transparent;
  color: #f6dcac;
  padding-top: 2px;
}

.sidebar listview > row {
  border-radius: 0;
  padding: 1px 6px;
  margin: 0;
}

.sidebar listview > row:hover {
  background-color: #134e5a;
}

.sidebar listview > row:selected {
  background-color: #faa968;
  color: #05182e;
}

.sidebar listview > row:selected:hover {
  background-color: #faa968;
  color: #05182e;
}

.vault-name {
  color: #3f8f8a;
  font-size: 14px;
  font-weight: bold;
  padding: 6px 8px 2px 8px;
  border-bottom: 1px solid alpha(#3f8f8a, 0.45);
}

.tree-cursor {
  color: #faa968;
}

.sidebar listview > row:selected .tree-cursor {
  color: #05182e;
}

.tree-inert {
  color: #6d8f8a;
  opacity: 0.55;
}

.tree-title {
  color: #6d8f8a;
  font-size: 14px;
}

.sidebar listview > row:selected .tree-title {
  color: alpha(#05182e, 0.7);
}

.tree-drop {
  box-shadow: inset 0 0 0 1px #faa968;
  border-radius: 0;
}

.sidebar listview:drop(active), .sidebar listview > row:drop(active) {
  box-shadow: none;
  outline: none;
}

button {
  background-color: transparent;
  background-image: none;
  color: #3f8f8a;
  border: none;
  border-radius: 0;
  box-shadow: none;
  padding: 3px 8px;
}

button:hover {
  background-color: #3f8f8a;
  color: #05182e;
}

button:checked {
  background-color: #faa968;
  background-image: none;
  color: #05182e;
}

button.suggested-action {
  background-color: transparent;
  background-image: none;
  color: #faa968;
}

button.suggested-action:hover {
  background-color: #faa968;
  color: #05182e;
}

button.destructive-action {
  background-color: transparent;
  background-image: none;
  color: #f85525;
}

button.destructive-action:hover {
  background-color: #f85525;
  color: #05182e;
}

windowcontrols button, windowcontrols button.titlebutton {
  background-color: transparent;
  background-image: none;
  border: none;
  box-shadow: none;
  color: #f6dcac;
}

windowcontrols button:hover, windowcontrols button.titlebutton:hover {
  background-color: #3f8f8a;
  background-image: none;
  color: #05182e;
  border-radius: 0;
}

windowcontrols button image, windowcontrols button:hover image {
  background: none;
  background-color: transparent;
  background-image: none;
  box-shadow: none;
  color: #f6dcac;
}

entry {
  background-color: #05182e;
  background-image: none;
  color: #f6dcac;
  border: 1px solid alpha(#3f8f8a, 0.55);
  border-radius: 0;
  box-shadow: none;
  outline: none;
  padding: 3px 6px;
}

entry:focus-within, entry:hover, entry:focus-visible {
  outline: none;
  box-shadow: none;
}

entry:focus-within {
  border-color: #3f8f8a;
}

entry > text, entry > text:focus-visible {
  outline: none;
  box-shadow: none;
}

row:focus, row:focus-visible, listview:focus-visible, list:focus-visible {
  outline: none;
}

scrollbar {
  background-color: transparent;
  border: none;
}

scrollbar slider {
  background-color: #6d8f8a;
  border: none;
  border-radius: 0;
  min-width: 6px;
  min-height: 6px;
  margin: 0;
}

scrollbar slider:hover {
  background-color: #3f8f8a;
}

popover > contents {
  background-color: #05182e;
  color: #f6dcac;
  border: 1px solid #3f8f8a;
  border-radius: 0;
  box-shadow: none;
}

.picker-scrim {
  background-color: alpha(#05182e, 0.6);
}
.rail {
  background-color: #05182e;
  padding: 6px 0;
}

.rail-button {
  background: none;
  border: none;
  box-shadow: none;
  color: #6d8f8a;
  padding: 8px 4px;
  min-height: 0;
  min-width: 0;
  border-radius: 0;
}

.rail-button label {
  font-family: Inter, sans-serif;
  font-size: 21px;
  border-bottom: none;
}

.rail-button:hover {
  background-color: #134e5a;
  color: #f6dcac;
}

.rail-button:checked {
  background: none;
  color: #faa968;
  box-shadow: inset 2px 0 0 0 #faa968;
}

.rail-settings {
  padding-left: 3px;
  padding-right: 6px;
}

.font-tick {
  color: #faa968;
}

.font-list {
  background-color: transparent;
  color: #f6dcac;
}

.font-list > row {
  padding: 1px 6px;
  border-radius: 0;
}

.font-list > row:hover {
  background-color: #134e5a;
}

.font-list > row:selected {
  background-color: #faa968;
  color: #05182e;
  box-shadow: none;
}

.settings {
  background-color: #05182e;
}

.settings-label {
  color: #3f8f8a;
}

.settings-close {
  background: none;
  border: none;
  box-shadow: none;
  color: #f6dcac;
  padding: 3px 8px;
  min-height: 0;
  min-width: 0;
}

.settings-close:hover {
  background-color: #3f8f8a;
  color: #05182e;
}

.keysheet-heading {
  color: #3f8f8a;
  font-size: 14px;
  font-weight: bold;
}

.keysheet-keys {
  color: #6d8f8a;
  font-family: Inter, sans-serif;
  font-size: 14px;
}

.theme-button {
  padding: 4px;
  border: 1px solid transparent;
}

.theme-button:checked {
  background: none;
  color: #f6dcac;
  border-color: #faa968;
}

.theme-name {
  font-size: 14px;
}

.conflict {
  background-color: #05182e;
  padding: 8px 10px;
}

.conflict-header {
  padding-bottom: 4px;
  border-bottom: 1px solid alpha(#3f8f8a, 0.45);
}

.conflict-heading {
  font-weight: bold;
}

.conflict-progress {
  color: #6d8f8a;
  font-size: 14px;
}

.conflict-title {
  font-family: Inter, sans-serif;
  font-size: 14px;
  font-weight: bold;
  padding: 0 2px 2px 2px;
  border-radius: 0;
  border-bottom: 1px solid alpha(#3f8f8a, 0.45);
}

.conflict-title.conflict-incoming {
  color: #3f8f8a;
}

.conflict-title.conflict-yours {
  color: #faa968;
}

.conflict-title.conflict-resolution {
  color: #f6dcac;
}

.conflict-body {
  font-family: "CaskaydiaMono Nerd Font", monospace;
  border-radius: 0;
  padding: 4px 6px;
  border: 1px solid alpha(#3f8f8a, 0.45);
}

.conflict-body, .conflict-body text {
  background-color: #05182e;
  color: #f6dcac;
}

.conflict-body.conflict-incoming {
  border-color: #3f8f8a;
}

.conflict-body.conflict-yours {
  border-color: #faa968;
}

.conflict-actions {
  padding-top: 4px;
}

.conflict-action {
  padding: 3px 8px;
}

.status-size, .status-git, .status-broken {
  background: none;
  border: none;
  box-shadow: none;
  font-family: Inter, sans-serif;
  font-size: 14px;
  padding: 0 6px;
  min-height: 0;
}

.status-size, .status-git {
  color: #6d8f8a;
}

.status-broken {
  color: #f85525;
}

.status-size:hover, .status-git:hover, .status-broken:hover {
  background: none;
  color: #faa968;
}

.backlinks {
  background-color: #05182e;
}

.backlinks-header {
  background: none;
  border: none;
  box-shadow: none;
  color: #3f8f8a;
  font-family: Inter, sans-serif;
  font-size: 14px;
  padding: 2px 8px;
  min-height: 0;
}

.backlinks-header:hover {
  background: none;
  color: #faa968;
}

.panel-bar {
  border-bottom: 1px solid alpha(#3f8f8a, 0.45);
}

.search-results {
  background-color: transparent;
  color: #f6dcac;
}

.search-results > row {
  border-radius: 0;
  padding: 0 6px;
  margin: 0;
}

.search-results > row:hover {
  background-color: #134e5a;
}

.search-results > row:selected {
  background-color: #faa968;
  color: #05182e;
  box-shadow: none;
}

.row-cursor {
  color: #faa968;
  font-family: Inter, sans-serif;
}

.search-results > row:selected .row-cursor {
  color: #05182e;
}

.panel-back {
  background: none;
  border: none;
  box-shadow: none;
  color: #3f8f8a;
  padding: 0 4px;
  margin: 0;
  min-height: 0;
  min-width: 0;
}

.panel-back label {
  font-family: Inter, sans-serif;
  font-size: 16px;
}

.panel-back:hover {
  background: none;
  color: #faa968;
}

.tags-heading {
  color: #3f8f8a;
  font-size: 14px;
  font-weight: bold;
}

.tag-row {
  padding: 1px 4px;
}

.search-heading {
  margin-top: 10px;
  padding: 0 2px 2px 2px;
  border-bottom: 1px solid alpha(#3f8f8a, 0.3);
}

.search-results > row:first-child .search-heading {
  margin-top: 0;
}

.search-name {
  font-weight: bold;
}

.search-folder {
  color: #6d8f8a;
  font-size: 14px;
}

.search-count {
  color: #6d8f8a;
  font-size: 14px;
}

.search-results > row:selected .search-folder, .search-results > row:selected .search-count {
  color: alpha(#05182e, 0.7);
}

.search-snippet {
  color: #6d8f8a;
  margin-left: 0;
  padding: 0 0 0 8px;
  border-left: 1px solid alpha(#3f8f8a, 0.3);
}

.completion list {
  background-color: transparent;
  color: #f6dcac;
  font-family: Inter, sans-serif;
}

.completion list > row {
  border-radius: 0;
  padding: 1px 6px;
}

.completion list > row:hover {
  background-color: #134e5a;
}

.completion list > row:selected {
  background-color: #faa968;
  color: #05182e;
}

.picker {
  background-color: #05182e;
  color: #f6dcac;
  border: 1px solid #3f8f8a;
  border-radius: 0;
  padding: 0;
}

.picker-title {
  color: #3f8f8a;
  font-family: Inter, sans-serif;
  font-size: 14px;
  padding: 2px 6px 0 6px;
}

.picker-prompt {
  color: #faa968;
  font-family: Inter, sans-serif;
  font-size: 19px;
  padding: 0 0 0 6px;
}

.picker entry {
  font-size: 19px;
  border: none;
  border-bottom: 1px solid alpha(#3f8f8a, 0.45);
  padding: 4px 6px;
}

.picker listview {
  background-color: transparent;
  color: #f6dcac;
  margin-top: 0;
}

.picker listview > row {
  border-radius: 0;
  padding: 1px 6px;
}

.picker listview > row:hover {
  background-color: #134e5a;
}

.picker listview > row:selected {
  background-color: #faa968;
  color: #05182e;
}

.picker-detail {
  color: #6d8f8a;
}

.picker listview > row:selected .picker-detail {
  color: alpha(#05182e, 0.65);
}

.picker listview > row:selected .row-cursor {
  color: #05182e;
}

tooltip {
  background-color: #05182e;
  color: #f6dcac;
  border: 1px solid #3f8f8a;
  border-radius: 0;
}
